--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
   "name": "@whitetrefoil/jsx-sp-events",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "A event helper because React decides to ban using of \"javascript:\"",
   "keywords": [
     "jsx",
-    "events"
+    "events",
+    "react",
+    "preact"
   ],
-  "main": "main.js",
-  "module": "main.module.js",
+  "source": "src/main.ts",
+  "main": "lib/main.js",
+  "module": "lib/main.module.js",
+  "unpkg": "lib/main.umd.js",
+  "typings": "lib/main.d.ts",
   "scripts": {
     "prepublishOnly": "node scripts/prepublish-checklist.js && npm run build",
-    "build": "node scripts/build.js",
+    "build": "rimraf lib && microbundle --raw",
     "publish": "echo \"Done publishing, don't forget to:\n  1. **dist-tag** your channel in npm.\n  2. bump version in package.json\nGood luck with the publish ;)\"",
-    "test": "jest --no-cache"
+    "test": "eslint . && jest --no-cache",
+    "watch": "microbundle watch"
   },
   "repository": {
     "type": "git",
@@ -24,21 +30,27 @@
     "test": "tests"
   },
   "engines": {
-    "node": ">=10.16.3"
+    "node": ">=12.19.0"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/jest": "^24.0.18",
-    "@types/react": "^16.9.2",
-    "jest": "^24.9.0",
-    "preact": "^10.0.0-rc.1",
-    "rimraf": "^3.0.0",
-    "ts-jest": "^24.0.2",
-    "tslint": "^5.19.0",
-    "typescript": "^3.6.2"
+    "@types/jest": "^26.0.14",
+    "@types/react": "^16.9.52",
+    "@types/rimraf": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
+    "@whitetrefoil/eslint-config": "^0.14.0",
+    "eslint": "^7.11.0",
+    "eslint-plugin-node": "^11.1.0",
+    "jest": "^26.5.3",
+    "microbundle": "^0.12.4",
+    "preact": "^10.5.4",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^26.4.1",
+    "typescript": "^4.0.3"
   },
   "jest": {
     "collectCoverage": true,
@@ -49,7 +61,7 @@
     "coveragePathIgnorePatterns": [
       "/~.*"
     ],
-    "coverageDirectory": "test_results",
+    "coverageDirectory": "test_results/jest",
     "coverageReporters": [
       "clover",
       "lcov",
@@ -66,13 +78,19 @@
       "json",
       "ts"
     ],
-    "moduleNameMapper": {},
-    "setupFiles": [],
-    "testRegex": "(/__tests__/.*|(\\.|/)spec)\\.[jt]sx?$",
-    "transform": {
-      ".ts": "ts-jest"
+    "moduleNameMapper": {
+      "^~/(.*)$": "<rootDir>/src/$1"
     },
     "preset": "ts-jest",
-    "testMatch": null
+    "reporters": [
+      "default"
+    ],
+    "setupFiles": [],
+    "setupFilesAfterEnv": [
+      "<rootDir>/tests/setup.ts"
+    ],
+    "testMatch": null,
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.[jt]sx?$",
+    "transformIgnorePatterns": []
   }
 }
