--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,35 @@
 {
+  "compileOnSave"  : false,
   "compilerOptions": {
-    "declaration"                 : false,
-    "allowJs"                     : false,
-    "allowSyntheticDefaultImports": true,
-    "target"                      : "esnext",
-    "lib"                         : ["esnext", "es7", "dom"],
-    "module"                      : "esnext",
-    "moduleResolution"            : "node",
-    "inlineSources"               : true,
-    "inlineSourceMap"             : false,
-    "skipLibCheck"                : true,
-    "sourceMap"                   : true,
-    "emitDecoratorMetadata"       : true,
-    "experimentalDecorators"      : true,
-    "removeComments"              : false,
-    "noImplicitAny"               : true,
+    "allowJs"                       : true,
+    "baseUrl"                       : ".",
+    "declaration"                   : true,
+    "declarationDir"                : "lib",
+    "emitDecoratorMetadata"         : true,
+    "esModuleInterop"               : true,
+    "experimentalDecorators"        : true,
+    "importsNotUsedAsValues"        : "error",
+    "inlineSourceMap"               : false,
+    "inlineSources"                 : false,
+    "lib"                           : ["esnext", "dom"],
+    "module"                        : "esnext",
+    "moduleResolution"              : "node",
+    "outDir"                        : "lib",
+    "paths"                         : {
+      "~/*": ["./src/*"]
+    },
+    "skipDefaultLibCheck"           : true,
+    "skipLibCheck"                  : true,
+    "sourceMap"                     : true,
+    "strict"                        : true,
+    "suppressImplicitAnyIndexErrors": true,
+    "target"                        : "esnext"
   },
   "include"        : [
-    "preact.ts",
-    "react.ts",
-    "main.ts",
+    "src/**/*.ts",
     "declarations/*.d.ts"
+  ],
+  "exclude"        : [
+    "**/node_modules/**"
   ]
 }
