--- a/.gitignore
+++ b/.gitignore
@@ -263,6 +263,17 @@ typings/
 .env
 
 
+### Yarn Berry (no zero-installs)
+.pnp.*
+.yarn/*
+#!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
+
 ### Project specific files
 ~*
 test_results/
