--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,35 +1,36 @@
 {
   "compileOnSave"  : false,
   "compilerOptions": {
-    "allowJs"                       : true,
-    "baseUrl"                       : ".",
-    "declaration"                   : true,
-    "declarationDir"                : "lib",
+    "allowJs"                       : false,
     "emitDecoratorMetadata"         : true,
     "esModuleInterop"               : true,
     "experimentalDecorators"        : true,
     "importsNotUsedAsValues"        : "error",
     "inlineSourceMap"               : false,
     "inlineSources"                 : false,
-    "lib"                           : ["esnext", "dom"],
-    "module"                        : "esnext",
-    "moduleResolution"              : "node",
+    "module"                        : "Node16",
+    "moduleResolution"              : "Node16",
+    "noEmit"                        : true,
+    "noImplicitOverride"            : true,
+    "noImplicitReturns"             : true,
+    "noUncheckedIndexedAccess"      : true,
     "outDir"                        : "lib",
-    "paths"                         : {
-      "~/*": ["./src/*"]
-    },
+    "resolveJsonModule"             : true,
     "skipDefaultLibCheck"           : true,
     "skipLibCheck"                  : true,
     "sourceMap"                     : true,
     "strict"                        : true,
     "suppressImplicitAnyIndexErrors": true,
-    "target"                        : "esnext"
+    "target"                        : "ESNext"
   },
   "include"        : [
-    "src/**/*.ts",
-    "declarations/*.d.ts"
+    "declarations/**/*",
+    "./*"
   ],
   "exclude"        : [
-    "**/node_modules/**"
+    "scripts/**/*.cjs",
+    "**/node_modules",
+    "**/.*",
+    "**/~*"
   ]
 }
