--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,37 +1,33 @@
 {
   "compileOnSave"  : false,
   "compilerOptions": {
-    "allowJs"                       : false,
-    "emitDecoratorMetadata"         : true,
-    "esModuleInterop"               : true,
-    "experimentalDecorators"        : true,
-    "importHelpers"                 : true,
-    "importsNotUsedAsValues"        : "error",
-    "isolatedModules"               : true,
-    "module"                        : "Node16",
-    "moduleResolution"              : "Node16",
-    "noEmit"                        : true,
-    "noImplicitOverride"            : true,
-    "noImplicitReturns"             : true,
-    "noUncheckedIndexedAccess"      : true,
-    "outDir"                        : "lib",
-    "resolveJsonModule"             : true,
-    "skipDefaultLibCheck"           : true,
-    "skipLibCheck"                  : true,
-    "sourceMap"                     : true,
-    "strict"                        : true,
-    "suppressImplicitAnyIndexErrors": true,
-    "target"                        : "ESNext"
+    "allowJs"                 : false,
+    "esModuleInterop"         : true,
+    "importHelpers"           : true,
+    "inlineSourceMap"         : false,
+    "inlineSources"           : false,
+    "module"                  : "Node16",
+    "moduleResolution"        : "Node16",
+    "noEmit"                  : true,
+    "noImplicitOverride"      : true,
+    "noImplicitReturns"       : true,
+    "noUncheckedIndexedAccess": true,
+    "outDir"                  : "lib",
+    "resolveJsonModule"       : true,
+    "skipDefaultLibCheck"     : true,
+    "skipLibCheck"            : true,
+    "sourceMap"               : true,
+    "strict"                  : true,
+    "target"                  : "ESNext",
+    "verbatimModuleSyntax"    : true
   },
   "include"        : [
     "declarations/*.ts",
     "*.ts"
   ],
-  "exclude"        : [
-    "node_modules"
-  ],
   "ts-node"        : {
     "esm"          : true,
+    "require"      : ["tsconfig-paths/register"],
     "transpileOnly": true
   }
 }
