--- a/package.json
+++ b/package.json
@@ -14,21 +14,15 @@
     "tests"
   ],
   "type": "module",
-  "source": "src/main.ts",
-  "types": "lib/main.d.ts",
-  "main": "lib/main.js",
   "exports": {
-    ".": {
-      "types": "./lib/main.d.ts",
-      "default": "./lib/main.js"
-    }
+    ".": "./lib/main.js"
   },
   "scripts": {
     "prepack": "yarn build",
-    "build": "tsc -p src/tsconfig.json --noEmit false --sourceMap false --inlineSources false",
+    "build": "rimraf lib && tsc -p src/tsconfig.json --noEmit false",
     "publish": "echo \"Done publishing, don't forget to:\n  1. **dist-tag** your channel in npm.\n  2. bump version in package.json\nGood luck with the publish ;)\"",
-    "test": "rimraf test_results && eslint . ; jest --no-cache",
-    "watch": "tsc -p src/tsconfig.json --noEmit false -w"
+    "test": "rimraf test_results && vitest run && eslint src tests",
+    "watch": "rimraf lib && tsc -p src/tsconfig.json --noEmit false -w"
   },
   "repository": {
     "type": "git",
@@ -37,23 +31,26 @@
   "author": "WhiteTrefoil <whitetrefoil@gmail.com>",
   "license": "Unlicense",
   "engines": {
-    "node": ">=14.8"
+    "node": ">=20.11"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.4",
-    "@types/react": "^18.2.21",
-    "@types/rimraf": "^3.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.6.0",
-    "@typescript-eslint/parser": "^6.6.0",
-    "@whitetrefoil/eslint-config": "^0.36.5",
-    "eslint": "^8.48.0",
-    "eslint-plugin-node": "^11.1.0",
-    "jest": "^29.6.4",
-    "jest-environment-jsdom": "^29.6.4",
-    "rimraf": "^5.0.1",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "@eslint/js": "^9.8.0",
+    "@stylistic/eslint-plugin": "^2.6.1",
+    "@types/eslint__js": "^8.42.3",
+    "@types/react": "^18.3.4",
+    "@types/rimraf": "^4.0.5",
+    "@vitest/coverage-v8": "^2.0.5",
+    "@whitetrefoil/eslint-config": "^6.0.0",
+    "eslint": "^9.9.1",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-n": "^17.10.2",
+    "rimraf": "^6.0.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.0.1",
+    "vite": "^5.4.2",
+    "vite-tsconfig-paths": "^5.0.1",
+    "vitest": "^2.0.5"
   },
-  "packageManager": "yarn@4.3.0"
+  "packageManager": "yarn@4.4.1"
 }
