--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,17 +2,17 @@
   "compileOnSave"  : false,
   "compilerOptions": {
     "allowJs"                 : false,
+    "declaration"             : true,
     "esModuleInterop"         : true,
     "importHelpers"           : true,
     "inlineSourceMap"         : false,
     "inlineSources"           : false,
-    "module"                  : "Node16",
-    "moduleResolution"        : "Node16",
+    "module"                  : "NodeNext",
+    "moduleResolution"        : "NodeNext",
     "noEmit"                  : true,
     "noImplicitOverride"      : true,
     "noImplicitReturns"       : true,
     "noUncheckedIndexedAccess": true,
-    "outDir"                  : "lib",
     "resolveJsonModule"       : true,
     "skipDefaultLibCheck"     : true,
     "skipLibCheck"            : true,
@@ -22,12 +22,7 @@
     "verbatimModuleSyntax"    : true
   },
   "include"        : [
-    "declarations/*.ts",
-    "*.ts"
-  ],
-  "ts-node"        : {
-    "esm"          : true,
-    "require"      : ["tsconfig-paths/register"],
-    "transpileOnly": true
-  }
+    "scripts/**/*",
+    "*"
+  ]
 }
